# quantified_self

./: .gitignore  .python-version  .sqlfluff  README.md  databricks.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_prod.yml  ruff.yml  sqlfluff.yml  validate_dev.yml
meta_scripts/: sync_secrets.py
project_utilities/: project_paths.py
resources/jobs/: quantified_self_etl_hourly.job.yml  quantified_self_etl_on_arrival.job.yml  sample_job.job.yml
resources/pipelines/: quantified_self_etl.pipeline.yml  quantified_self_etl_pipeline.pipeline.yml
resources/schemas/: bronze.schema.yml  gold.schema.yml  raw.schema.yml  seed.schema.yml  silver.schema.yml
resources/volumes/: raw_landing_zone.volume.yml
src/: sample_notebook.ipynb
src/pipelines/quantified_self_etl/transformations/bronze/: base__workoutlog.py  stg__body_measurements.py  stg__workoutlog.py
src/pipelines/quantified_self_etl/transformations/gold/: workout_daily.py  workout_details.py  workout_dimensions.py  workout_exercise_details.py  workout_muscle_group_details.py  workout_set_details.py
src/pipelines/quantified_self_etl/transformations/raw/: WorkoutLog.sql  body_measurements.sql
src/pipelines/quantified_self_etl/transformations/raw/base/: AppLog.sql  LocationLog.sql  TimestampLog.sql  WeatherLog.sql  WorkoutLog.sql  base__AppLog.sql  base__LocationLog.sql  base__TimestampLog.sql  base__WeatherLog.sql  (+2 more)
src/pipelines/quantified_self_etl/transformations/seed/: calendar.py  clock.py
src/pipelines/quantified_self_etl/transformations/silver/: int_body_measurements.py  int_workout_detail.py  int_workout_details.py
src/pipelines/quantified_self_etl/transformations/utilities/: constants.py  paths.py  secrets.py  utils.py  workout_utils.py
src/quantified_self/: main.py
src/quantified_self_etl/: README.md
src/quantified_self_etl/explorations/: sample_exploration.ipynb
src/quantified_self_etl/transformations/: sample_trips_quantified_self.py  sample_zones_quantified_self.py
src/reports/power_bi/theme/: Wallboard_Dark_Theme.json  punit_singh_dark_theme_green_hint.json  workout_yellow_theme.json
src/reports/power_bi/workout/: workout.pbip
src/reports/power_bi/workout/workout.Report/: .platform  definition.pbir
src/reports/power_bi/workout/workout.SemanticModel/: .platform  diagramLayout.json
tests/: sample_taxis_test.py
(+127 files in other folders)
