[project]
name = "quantified-self"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyspark>=4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.5.0",
    "sqlfluff>=4.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "TID", "A", "S", "DTZ", "ARG", "PL"
]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"src/pipelines/quantified_self_etl/transformations/**/*.py" = ["F821"]

